# FantasyEngine

./: CMakeLists.txt  CMakePresets.json  FantasyEngine.cpp  FantasyEngine.h  README.md
Scripts/: FetchLibraries.cmake
Source/: CMakeLists.txt  Foo.h  main.cpp
Source/Object/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  DataStructures.h  Object.cpp  Object.h  Timer.h
Source/Renderer/: Renderer.cpp  Renderer.h  RendererManager.h
Source/Shaders/: PixelShader.hlsl  VertexShader.hlsl
Source/Utility/: Utility.h
Source/Window/: Window.cpp  Window.h
